Further updates to experimental reflection APIs
