# proto/apidocs.swagger.json
@@ -45,6 +45,39 @@
     "application/json"
   ],
   "paths": {
+    "/v1/experimental/diffschema": {
+      "post": {
+        "summary": "EXPERIMENTAL: DiffSchema is an API that allows clients to request the difference between the\nspecified schema and the schema stored in SpiceDB. This is useful for clients that need to\nintrospect the schema of a SpiceDB instance.",
+        "operationId": "ExperimentalService_ExperimentalDiffSchema",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ExperimentalDiffSchemaResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1ExperimentalDiffSchemaRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ExperimentalService"
+        ]
+      }
+    },
     "/v1/experimental/permissions/bulkcheckpermission": {
       "post": {
         "summary": "NOTE: BulkCheckPermission has been promoted to the stable API as \"CheckBulkPermission\" and the\nAPI will be removed from experimental in a future release.",
@@ -248,39 +281,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/v1BulkImportRelationshipsRequest"
-            }
-          }
-        ],
-        "tags": [
-          "ExperimentalService"
-        ]
-      }
-    },
-    "/v1/experimental/schemadiff": {
-      "post": {
-        "summary": "EXPERIMENTAL: DiffSchema is an API that allows clients to request the difference between the\nspecified schema and the schema stored in SpiceDB. This is useful for clients that need to\nintrospect the schema of a SpiceDB instance.",
-        "operationId": "ExperimentalService_ExperimentalSchemaDiff",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1ExperimentalSchemaDiffResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1ExperimentalSchemaDiffRequest"
             }
           }
         ],
@@ -1838,21 +1838,21 @@
     "v1ExpSchemaFilter": {
       "type": "object",
       "properties": {
-        "optionalDefinitionNameMatch": {
+        "optionalDefinitionNameFilter": {
           "type": "string",
-          "description": "optional_definition_name_match is a regex that is matched against the definition name."
+          "description": "optional_definition_name_filter is a prefix that is matched against the definition name."
         },
-        "optionalCaveatNameMatch": {
+        "optionalCaveatNameFilter": {
           "type": "string",
-          "description": "optional_caveat_name_match is a regex that is matched against the caveat name."
+          "description": "optional_caveat_name_filter is a prefix that is matched against the caveat name."
         },
-        "optionalRelationNameMatch": {
+        "optionalRelationNameFilter": {
           "type": "string",
-          "description": "optional_relation_name_match is a regex that is matched against the relation name."
+          "description": "optional_relation_name_filter is a prefix that is matched against the relation name."
         },
-        "optionalPermissionNameMatch": {
+        "optionalPermissionNameFilter": {
           "type": "string",
-          "description": "optional_permission_name_match is a regex that is matched against the permission name."
+          "description": "optional_permission_name_filter is a prefix that is matched against the permission name."
         }
       },
       "description": "ExpSchemaFilter is a filter that can be applied to the schema on reflection."
@@ -1925,9 +1925,9 @@
             "$ref": "#/definitions/v1ExpRelationReference"
           }
         },
-        "optionalDefinitionNameMatch": {
+        "optionalDefinitionNameFilter": {
           "type": "string",
-          "description": "optional_definition_name_match is a regex that is matched against the definition name(s)\nfor the permissions returned.\nIf not specified, will be ignored."
+          "description": "optional_definition_name_match is a prefix that is matched against the definition name(s)\nfor the permissions returned.\nIf not specified, will be ignored."
         }
       }
     },
@@ -1974,6 +1974,33 @@
         }
       }
     },
+    "v1ExperimentalDiffSchemaRequest": {
+      "type": "object",
+      "properties": {
+        "consistency": {
+          "$ref": "#/definitions/v1Consistency"
+        },
+        "comparisonSchema": {
+          "type": "string"
+        }
+      }
+    },
+    "v1ExperimentalDiffSchemaResponse": {
+      "type": "object",
+      "properties": {
+        "diffs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1ExpSchemaDiff"
+          }
+        },
+        "readAt": {
+          "$ref": "#/definitions/v1ZedToken",
+          "description": "read_at is the ZedToken at which the schema was read."
+        }
+      }
+    },
     "v1ExperimentalReflectSchemaRequest": {
       "type": "object",
       "properties": {
@@ -2008,33 +2035,6 @@
             "$ref": "#/definitions/v1ExpCaveat"
           },
           "description": "caveats are the caveats defined in the schema."
-        },
-        "readAt": {
-          "$ref": "#/definitions/v1ZedToken",
-          "description": "read_at is the ZedToken at which the schema was read."
-        }
-      }
-    },
-    "v1ExperimentalSchemaDiffRequest": {
-      "type": "object",
-      "properties": {
-        "consistency": {
-          "$ref": "#/definitions/v1Consistency"
-        },
-        "comparisonSchema": {
-          "type": "string"
-        }
-      }
-    },
-    "v1ExperimentalSchemaDiffResponse": {
-      "type": "object",
-      "properties": {
-        "diffs": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1ExpSchemaDiff"
-          }
         },
         "readAt": {
           "$ref": "#/definitions/v1ZedToken",
